# eba-mcp

./: .gitignore  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
data/corpora/: eba-current-applicable-2026-06-01-nomic-embed-text.manifest.json
docs/: architecture.md  current-applicable-corpus.md  data-model.md  limitations.md  mcp-contract.md
pipeline/: current-relationships.yaml  pyproject.toml  relationships_override.yaml  seed_curated_enriched.yaml  seed_curated_normalized.yaml  seed_documents.yaml  seed_documents_curated.yaml  seed_documents_current.yaml  seed_documents_current_enriched.yaml  seed_documents_current_normalized.yaml  seed_documents_expanded.yaml  seed_documents_large.yaml  test_discovery.py  test_env.py  tests_chunk_ids.py  tests_discovery.py  tests_embeddings.py  tests_eval_metadata_toc.py  tests_index_toc.py  tests_llm_repair.py  tests_parser_metadata.py
pipeline/eba_pipeline/: cli.py  config.py  env.py  ids.py
pipeline/eba_pipeline/crawler/: discovery.py  downloader.py  enrich.py  manifest.py  normalize.py
pipeline/eba_pipeline/eval/: citation_roundtrip.py  metadata.py  navigation.py  queries.yaml  toc.py
pipeline/eba_pipeline/index/: build_index.py  embeddings.py  fts.py  schema.sql  split_chunks.py  sqlite_store.py
pipeline/eba_pipeline/parser/: metadata.py  paragraphize.py  pdf_extract.py  quality.py  repair.py
pipeline/eba_pipeline/relationships/: extractor.py
pipeline/scripts/: eval_compare.py  eval_compare.sh
src/: config.ts  env.ts  index.ts
src/citations/: citation.ts  (+1 more)
(+18 files in other folders)
